Fix button alignment

--- a/loop1/step6/assets/styles.css
+++ b/loop1/step6/assets/styles.css
@@ -92,7 +92,7 @@ body {
   border: hidden;
   background-color: #fff;
   position: relative;
-  left: 22%;
+  left: 25%;
   font-weight: bold;
   text-transform: uppercase;
   color: #8b8b8c;
